package pt.hotel.animais.model.enums;

public enum TipoServicoExtra {
    BANHO,
    PASSEIO,
    OUTRO
}
